add  exceptions